<resources>
    <string name="app_name">Insta</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add">Add post</string>
    <string name="title_profile">Profile</string>
    <string name="username">Username</string>
    <string name="_0">0</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full name</string>
    <string name="bio">Bio</string>
    <string name="notifications">Notifications</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="website">Website</string>
    <string name="private_information">Private Information</string>
    <string name="switch_to_professional_account">Switch to Professional Account</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="test_test_com">test@test.com</string>
    <string name="confirm">Confirm</string>
    <string name="phone_number">Phone number</string>
    <string name="_254712345678">+254712345678</string>
    <string name="account_edit_profile">Edit Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="account_bio">Bio</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="need_an_account">Need an Account? Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an Account? Sign In</string>
    <string name="register">Register</string>
    <string name="search">Search...</string>
    <string name="follow">Follow</string>
    <string name="say_something_about_your_post">Say something about your post</string>
</resources>
