<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_ui"
        tools:context=".SignUpActivity">

    <ImageView
            android:id="@+id/app_logo"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:src="@drawable/instagram"
            android:tint="@android:color/white" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_logo"
            android:layout_margin="16dp">

        <EditText
                android:id="@+id/sign_up_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inputs_background"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="10dp" />

        <EditText
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_up_full_name"
                android:layout_marginTop="10dp"
                android:background="@drawable/inputs_background"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="10dp" />

        <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_up_username"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/inputs_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

        <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_up_email"
                android:background="@drawable/inputs_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />

        <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_up_password"
                android:layout_marginTop="30dp"
                android:background="@drawable/buttons_background"
                android:text="@string/register"
                android:textColor="@android:color/white" />

        <TextView
                android:id="@+id/sign_in_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:text="@string/already_have_an_account_sign_in"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>