<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".AccountActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:windowBackground">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/edit_profile_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp">

                <ImageView
                        android:id="@+id/btn_close_profile"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/ic_close"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_edit_profile"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/btn_close_profile"
                        android:layout_marginStart="15dp"/>

                <ImageView
                        android:id="@+id/btn_save_profile_info"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_check"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
            android:id="@+id/rel_layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_bar_layout_edit_profile"
            android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_profile_photo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profile"/>

        <TextView
                android:id="@+id/txt_edit_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_profile_photo"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:layout_below="@id/edit_profile_photo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"/>

        <TextView
                android:id="@+id/txt_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_below="@id/txt_edit_photo"/>

        <EditText
                android:id="@+id/account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/name"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/txt_profile_name"/>

        <TextView
                android:id="@+id/txt_account_profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_below="@id/account_name"/>

        <EditText
                android:id="@+id/account_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/txt_account_profile_username"/>

        <TextView
                android:id="@+id/txt_account_profile_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_bio"
                android:layout_below="@id/account_username"/>

        <EditText
                android:id="@+id/account_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/bio"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/txt_account_profile_bio"/>

        <Button
                android:id="@+id/btn_account_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/sign_out"
                android:background="@drawable/buttons_background"
                android:layout_above="@id/btn_delete_account"/>

        <Button
                android:id="@+id/btn_delete_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/delete_account"
                android:background="@drawable/buttons_background"/>

    </RelativeLayout>

</RelativeLayout>