<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_ui"
        tools:context=".SignInActivity">

    <ImageView
            android:id="@+id/app_logo"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:tint="@android:color/white"
            android:src="@drawable/instagram" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_logo"
            android:layout_margin="16dp">

        <EditText
                android:id="@+id/sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/inputs_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

        <EditText
                android:id="@+id/sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_in_email"
                android:background="@drawable/inputs_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />

        <Button
                android:id="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_in_password"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:background="@drawable/buttons_background"
                android:text="@string/login" />

        <TextView
                android:id="@+id/sign_up_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/need_an_account"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>