<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent" android:layout_height="match_parent"
                tools:context=".fragments.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:windowBackground">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/profile_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp">

                <TextView
                        android:id="@+id/profile_fragment_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:layout_centerVertical="true"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>

                <ImageView
                        android:id="@+id/options_view"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_options"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_bar_layout_profile">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/top_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/profile"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:weightSum="6"
                            android:orientation="horizontal">

                        <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:orientation="vertical">

                            <TextView
                                    android:id="@+id/total_posts"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_0"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    android:textColor="@android:color/black"/>

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/posts"
                                    android:textSize="12sp"
                                    android:textColor="@android:color/black"/>

                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:layout_marginStart="10dp"
                                android:gravity="center"
                                android:orientation="vertical">

                            <TextView
                                    android:id="@+id/total_followers"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_0"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    android:textColor="@android:color/black"/>

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/followers"
                                    android:textSize="12sp"
                                    android:textColor="@android:color/black"/>

                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:layout_marginStart="10dp"
                                android:gravity="center"
                                android:orientation="vertical">

                            <TextView
                                    android:id="@+id/total_following"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_0"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    android:textColor="@android:color/black"/>

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/following"
                                    android:textSize="12sp"
                                    android:textColor="@android:color/black"/>

                        </LinearLayout>

                    </LinearLayout>

                    <Button
                            android:id="@+id/btn_edit_profile"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:text="@string/edit_profile"
                            android:textAllCaps="false"
                            android:textSize="12sp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/buttons_background"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/mid_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/profile_fragment_full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                <TextView
                        android:id="@+id/profile_fragment_bio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio"
                        android:textSize="13sp"
                        android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/buttons_background"
                    android:layout_marginEnd="5dp">

                <ImageButton
                        android:id="@+id/btn_images_grid_view"
                        android:layout_width="0dp"
                        android:layout_height="49dp"
                        android:layout_weight="1"
                        style="?android:attr/buttonBarButtonStyle"
                        android:src="@drawable/ic_grid"/>

                <ImageButton
                        android:id="@+id/btn_images_save"
                        android:layout_width="0dp"
                        android:layout_height="49dp"
                        android:layout_weight="1"
                        style="?android:attr/buttonBarButtonStyle"
                        android:src="@drawable/ic_save_large"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>